Fix dl.description-table styles. Do not define widths on .description-table elements, generally these can collapse down to mobile size

--- a/src/app/origin/detail/detail.component.scss
+++ b/src/app/origin/detail/detail.component.scss
@@ -1,3 +1,7 @@
+.description-table {
+  max-width: 630px;
+}
+
 .uncertainty {
   font-weight: 400;
 }
